fixing color contrast

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -156,6 +156,7 @@ h1 {
     font-size: xx-large;
     padding: 10px;
     background-color: var(--Delft-Blue);
+    color: white;
     
 }
 
